Fix for page shifting.

--- a/app/assets/stylesheets/frontend/base.css.scss
+++ b/app/assets/stylesheets/frontend/base.css.scss
@@ -19,7 +19,6 @@ html {
 }
 
 body {
-  width: 100%;
   height: 100%;
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   color: $color_1;
